# polars-rust-compiled-function

./: Cargo.toml  README.md  pyproject.toml  test.py
src/: ffi.rs  lib.rs
